--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>店頭予約入力フォーム</title>
+  <title>テスト店頭予約入力フォーム</title>
   <link rel="stylesheet" href="style.css"> <!-- ← ここが超重要！ -->
 </head>
 <body>
 
 <form id="reservationForm" class="form-container" onsubmit="return false;">
-<h2>店頭予約入力フォーム</h2>
+<h2>テスト店頭予約入力フォーム</h2>
 
 <div class="form-group date-group">
 <label>※必須：日付</label>
